--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
    <meta name="MSSmartTagsPreventParsing" content="true" /> 
    <meta name="author" content="Andrew Gwozdziewycz" /> 
    <link rel="shortcut icon" href="http://www.hackandtell.org/favicon.ico" type="image/x-icon" /> 
-   <link rel="icon" href="http://www.hackandtell.org/favicon.ico" type="image/x-icon" /> 
+   <link rel="icon" href="http://www.hackandtell.org/favicon.ico" type="image/x-icon" />
+   
+   <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
  
    <link rel="stylesheet" type="text/css" href="timer.css" /> 
 </head> 
@@ -19,7 +21,7 @@
       <div id="timer"></div>
    </div> 
 
-  <script src="jquery-1.4.2.min.js" type="text/javascript"></script>
+  <script src="jquery-1.10.1.min.js"></script>
   <script src="jquery.fit.js" type="text/javascript"></script>
   <script src="timer.js" type="text/javascript"></script>
   <audio id="sound" src="clapping.mp3" autobuffer>
